[ refactor ] more flexible OutTypes (#7)
* [ refactor ] more flexible OutTypes

* [ CI ] build http-server-api

* [ CI ] dont prompt in case of custom build hooks

--- a/.github/workflows/ci-lib.yml
+++ b/.github/workflows/ci-lib.yml
@@ -27,5 +27,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build library
+      - name: Build http-types
         run: pack install http-types
+      - name: Build http-server-api
+        run: pack --no-prompt install http-server-api
