--- a/pack.toml
+++ b/pack.toml
@@ -14,6 +14,12 @@ url    = "https://github.com/stefan-hoeck/idris2-async.git"
 commit = "latest:main"
 ipkg   = "async.ipkg"
 
+[custom.all.ilex]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-ilex.git"
+commit = "latest:main"
+ipkg   = "ilex.ipkg"
+
 [custom.all.async-posix]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-async.git"
